# playground

./: .bazelrc  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  WORKSPACE
.github/workflows/: build-and-test.yml
cci/: BUILD  utils.hpp
cci/arrays_strings/: BUILD  one_away.cpp  palindrome.cpp  permutation.cpp  rotate_matrix.cpp  string_compression.cpp  string_rotation.cpp  unique.cpp  urlify.cpp  zero_matrix.cpp
cci/linked_lists/: BUILD  delete_middle.cpp  intersection.cpp  kth_element.cpp  list.hpp  loop.cpp  palindrome.cpp  partition.cpp  remove_duplicates.cpp  sum_lists.cpp
cci/stacks_queues/: BUILD  animal_shelter.cpp  min_elem.cpp  queue_via_stack.cpp  sort_stack.cpp  stacks_of_plates.cpp
cci/trees_graphs/: BUILD  build_order.cpp  check_balanced.cpp  first_common_ancestor.cpp  list_of_depths.cpp  minimal_tree.cpp  route.cpp  successor.cpp  utils.hpp  validate_bst.cpp
concurrent/: BUILD  consumer_producer.hpp  test_consumer_producer.cpp
concurrent/mpmc/: CMakeLists.txt  README.md
concurrent/mpmc/benchmark/: CMakeLists.txt  mpmc.cpp
concurrent/mpmc/src/: CMakeLists.txt  mpmc.cpp  mpmc_1_cond.cpp  mpmc_bounded.cpp  mpmc_lockfree.cpp  mpmc_mtx.cpp  mpmc_unbounded.cpp
cpp/: BUILD  type_erasure.cpp
random/: main.py
structures/list/: BUILD  benchmark_list.cpp  benchmark_list_insert.cpp  benchmark_list_remove.cpp  list.hpp  main.cpp  test_list.cpp
toolchain/: BUILD  cc_toolchain_config.bzl  toolchain.bzl
toolchain/clang-x86_64/: BUILD  cc_toolchain_config.bzl
toolchain/clang12-x86_64/: cc_toolchain_config.bzl
tools/: analyse.py
(+35 files in other folders)
